# src/main/java/cn/chainof/sunup/controller/api/EmailApi.java
@@ -1,38 +1,0 @@
-/**
- * NOTE: This class is auto generated by the swagger code generator program (2.3.1).
- * https://github.com/swagger-api/swagger-codegen
- * Do not edit the class manually.
- */
-package cn.chainof.sunup.controller.api;
-
-import cn.chainof.sunup.controller.dto.data.EmailMsgDTO;
-import io.swagger.annotations.*;
-import org.springframework.http.ResponseEntity;
-import org.springframework.validation.annotation.Validated;
-import org.springframework.web.bind.annotation.PathVariable;
-import org.springframework.web.bind.annotation.RequestBody;
-import org.springframework.web.bind.annotation.RequestHeader;
-import org.springframework.web.bind.annotation.RequestMapping;
-import org.springframework.web.bind.annotation.RequestMethod;
-import org.springframework.web.bind.annotation.RequestParam;
-import org.springframework.web.bind.annotation.RequestPart;
-import org.springframework.web.multipart.MultipartFile;
-
-import javax.validation.Valid;
-import javax.validation.constraints.*;
-import java.util.List;
-
-@Api(value = "Email", description = "the Email API")
-public interface EmailApi {
-
-    @ApiOperation(value = "发送邮件", nickname = "sendEmailMsg", notes = "", authorizations = {
-        @Authorization(value = "token")
-    }, tags={ "Email", })
-    @ApiResponses(value = { 
-        @ApiResponse(code = 200, message = "发送成功") })
-    @RequestMapping(value = "/project/email/sendMsg",
-        produces = { "application/json" }, 
-        method = RequestMethod.POST)
-    ResponseEntity<Void> sendEmailMsg(@ApiParam(value = ""  )  @Valid @RequestBody EmailMsgDTO emailMsgDTO);
-
-}
